--- a/package.json
+++ b/package.json
@@ -31,16 +31,16 @@
     "singleQuote": true,
     "trailingComma": "es5"
   },
-  "name": "multicall-batch",
+  "name": "multicall-batcher",
   "author": "",
-  "module": "dist/multicall-batch.esm.js",
+  "module": "dist/multicall-batcher.esm.js",
   "size-limit": [
     {
-      "path": "dist/multicall-batch.cjs.production.min.js",
+      "path": "dist/multicall-batcher.cjs.production.min.js",
       "limit": "10 KB"
     },
     {
-      "path": "dist/multicall-batch.esm.js",
+      "path": "dist/multicall-batcher.esm.js",
       "limit": "10 KB"
     }
   ],
